# dio-rag

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/: app.py  chatbot.py  depends.py  exceptions.py  rag.py  schemas.py  settings.py
src/routers/: __init__.py  chat.py  documents.py
