[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.8",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.136.0",
    "fastembed>=0.8.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.31",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "markitdown[docx,pdf]>=0.1.5",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "types-aiofiles>=25.1.0.20260409",
]
